# rust_parallel_xz

./: Cargo.toml  README
src/: compress.rs  decl.rs  main.rs  reader.rs  writer.rs
