[package]
name = "parallel_xz"
version = "0.2.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
num_cpus = "1.10.1"
thiserror = "1"
threadpool = "1.7.1"
xz2 = "0.1.6"
